--- a/MachineLearning/NaiveBayes/NaiveBayes.ipynb
+++ b/MachineLearning/NaiveBayes/NaiveBayes.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "8"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "(0.5, 0.5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "male    5.76375  74.875"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "male    0.120798  53.553571"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,44 +367,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def p_given_x(obs,mean,var):\n",
-    "    return 1 / (np.sqrt(2 * np.pi() * var)) * (np.exp(-((obs - mean) ** 2) / 2 * var))"
+    "male_mean_height = mean['height'][1]\n",
+    "male_mean_weight = mean['weight'][1]\n",
+    "\n",
+    "male_var_height = var['height'][1]\n",
+    "male_var_weight = var['weight'][1]\n",
+    "\n",
+    "female_mean_height = mean['height'][0]\n",
+    "female_mean_weight = mean['weight'][0]\n",
+    "\n",
+    "female_var_height = var['height'][0]\n",
+    "female_var_weight = var['weight'][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newInput = [5.7,65]\n",
+    "def p_given_x(obs,mean,var):\n",
+    "    return (1 / (np.sqrt(2 * np.pi * var))) * np.exp(-((obs - mean) ** 2) / (2 * var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newInput = [5.1,55]\n",
     "p_h, p_w = newInput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male = p_given_x(p_h,male_mean_height, male_var_height) * p_given_x(p_w,male_mean_weight, male_var_weight) * prob_male\n",
+    "female = p_given_x(p_h,female_mean_height, female_var_height) * p_given_x(p_w,female_mean_weight,female_var_weight) * prob_female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'male_mean_h' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-a9b98bdd8658>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp_given_x\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp_h\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmale_mean_h\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmale_var\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mp_given_x\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp_w\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmale_mean_w\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmale_var_w\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mprob_male\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mfemale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp_given_x\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp_h\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfemale_mean_h\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfemale_var\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mp_given_x\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp_w\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfemale_mean_w\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfemale_var_w\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mprob_female\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'male_mean_h' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "male = p_given_x(p_h,male_mean_h, male_var,h) * p_given_x(p_w,male_mean_w, male_var_w) * prob_male\n",
-    "female = p_given_x(p_h,female_mean_h, female_var,h) * p_given_x(p_w,female_mean_w,female_var_w) * prob_female"
+    "male > female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02788463184966425"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "female"
    ]
   },
   {
